# blinky-769

./: Cargo.toml
scripts/check/: stm32f796.sh
scripts/run/: stm32f769.sh
src/: main.rs
