[package]
name = "blinky"
version = "0.1.0"
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"

[dev-dependencies]
mockall = "0.7.2"

[features]
embedded_platform = []
st_board = []
stm32f769 = ["stm32f7xx-hal/stm32f769", "embedded_platform", "st_board"]

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f7xx-hal = {version = "0.2.0", features = ["stm32f769", "rt"]}
